k8s/stateless/stateless.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: demo-api
  namespace: demo-project
spec:
  replicas: 2
  selector:
    app: demo-api
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - demo-api
        from:
          kind: ImageStreamTag
          name: demo-api:latest
    - type: ConfigChange
  template:
    metadata:
      labels:
        app: demo-api
    spec:
      containers:
        - name: demo-api
          image: " "
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  namespace: demo-project
spec:
  selector:
    app: demo-api
  ports:
    - port: 8081
      targetPort: 8081

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-api
  namespace: demo-project
spec:
  to:
    kind: Service
    name: demo-api
  port:
    targetPort: 8081
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
